--- a/Praktika-Template/Areas/EternaAdmin/Views/Shared/_Layout.cshtml
+++ b/Praktika-Template/Areas/EternaAdmin/Views/Shared/_Layout.cshtml
@@ -253,6 +253,7 @@
                         <div class="collapse" id="ui-basic">
                             <ul class="nav flex-column sub-menu">
                                 <li class="nav-item"> <a class="nav-link" asp-controller="slider" asp-action="index">Slider</a></li>
+                                <li class="nav-item"> <a class="nav-link" asp-controller="Card" asp-action="index">Card</a></li>
                             </ul>
                         </div>
                     </li>
