--- a/Praktika-Template/Views/Home/Home.cshtml
+++ b/Praktika-Template/Views/Home/Home.cshtml
@@ -26,7 +26,7 @@
                     </div>
                     @foreach (Slider slider in Model.Sliders)
                    {
-                    <div class="carousel-item">
+                    <div class="carousel-item active">
                         <img src="~/assets/img/@slider.Image" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-md-block info">
                             <h2>@slider.Title</h2>
