--- a/Praktika-Template/Views/Shared/_Layout.cshtml
+++ b/Praktika-Template/Views/Shared/_Layout.cshtml
@@ -13,14 +13,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+          integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+          href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+          integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>@ViewBag.Title</title>
 </head>
 
@@ -44,6 +44,8 @@
                         <a href="@layoutservis.GetDatas().Result.FirstOrDefault(s=>s.Key=="Facebook").IconUrl"><i class="@layoutservis.GetDatas().Result.FirstOrDefault(s=>s.Key=="Facebook").Value"></i></a>
                         <a href="@layoutservis.GetDatas().Result.FirstOrDefault(s=>s.Key=="Linkedin").IconUrl"><i class="@layoutservis.GetDatas().Result.FirstOrDefault(s=>s.Key=="Linkedin").Value"></i></a>
                         <a href="@layoutservis.GetDatas().Result.FirstOrDefault(s=>s.Key=="Twitter").IconUrl"><i class="@layoutservis.GetDatas().Result.FirstOrDefault(s=>s.Key=="Twitter").Value"></i></a>
+                        <a asp-controller="Account" asp-action="Register" style="color:white ;  cursor:pointer"><i class="fa-solid fa-arrow-right-to-bracket" style="cursor:pointer"></i></a>
+                        <a asp-controller="Account"  asp-action="Login" style="color:white ; cursor:pointer"><i class="fa-solid fa-address-card" style="cursor:pointer"></i></a>
                     </div>
                 </div>
             </div>
@@ -59,9 +61,9 @@
                     </div>
                     <div class="col-lg-6 navbar">
                         <ul class="d-flex topnav" id="myTopnav">
-                            <li><a a asp-controller="home" asp-action="home" >Home</a></li>
+                            <li><a a asp-controller="home" asp-action="home">Home</a></li>
                             <li><a href="">About</a></li>
-                            <li><a asp-controller="services" asp-action="index" >Services</a></li>
+                            <li><a asp-controller="services" asp-action="index">Services</a></li>
                             <li><a href="">Portfolio</a></li>
                             <li><a href="">Team</a></li>
                             <li><a href="">Pricing</a></li>
@@ -191,14 +193,14 @@
             </div>
         </section>
     </footer>
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
-        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+            integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+            crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
     <script src="~/assets/js/script.js"></script>
 </body>
 
