--- a/Praktika-Template/Views/Account/Login.cshtml
+++ b/Praktika-Template/Views/Account/Login.cshtml
@@ -11,18 +11,20 @@
           class="img-fluid" alt="Phone image">
       </div>
       <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-           
+           <div asp-validation-summary="ModelOnly"></div>
         <form method ="post">
           <!-- Email input -->
           <div class="form-outline mb-4">
             <input asp-for="Username" id="form1Example13" class="form-control form-control-lg" />
             <label class="form-label" for="form1Example13">Username</label>
+            <span asp-validation-for="Username"></span>
           </div>
 
           <!-- Password input -->
           <div class="form-outline mb-4">
             <input asp-for="Password" id="form1Example23" class="form-control form-control-lg" />
             <label class="form-label" for="form1Example23">Password</label>
+            <span asp-validation-for="Password"></span>
           </div>
 
           <div class="d-flex justify-content-around align-items-center mb-4">
